tdf#170438 docx export: never export listItem with empty displayText

MS Word was reporting a document as corrupt
after LO round-tripped it with an empty displayText.
However, an empty w:value is not a 'corrupt' result.

Note that this situation was possible also while importing DOCX.
We don't always import SDTs as content controls (e.g. in tables).
In that case, only the 'values' are considered,
so an empty entry is created in the dropdown field,
which then got exported as an empty displayText.

make CppunitTest_sw_ooxmlexport25 \
    CPPUNIT_TEST_NAME=testTdf170438_dropdown

ooxmlexport13's tdf119809.docx is a VML shape
that is called a combobox, and it exported
with WritePostponedFormControl.
It sounds like it can only have 'values' when added by a VBA macro,
so likely these will almost never output a displayText.

Change-Id: Ib306eda90b4179e10402c276e7c47a3bfdd83cfb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197867
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
(cherry picked from commit 270fe90efbb275a670d063303e395ed88ea4731d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198025
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>